# g01_prii3_turtlesim

./: package.xml  setup.py
g01_prii3_turtlesim/: draw_number.py
src/avoid_colisions/: package.xml  setup.cfg  setup.py
src/avoid_colisions/avoid_colisions/: avoid_colisions.py
src/avoid_colisions/launch/: avoid_colisions.launch.py
src/avoid_colisions/resource/: avoid_colisions
src/evade_colisions/: package.xml  setup.cfg  setup.py
src/evade_colisions/evade_colisions/: evade_colisions.py
src/evade_colisions/launch/: evade_colisions.launch.py
src/g01_prii3_turtlesim/: .gitignore  CMakeList.txt  Guia Ros2 Git.docx  setup.cfg
src/g01_prii3_turtlesim/launch/: draw_number_launch.py
src/g01_prii3_turtlesim/srv/: DrawControl.srv
src/g07_prii3_move_turtlebot/: CMakeLists.txt  package.xml
src/g07_prii3_move_turtlebot/launch/: draw_number.launch.py
src/g07_prii3_move_turtlebot/src/: .move_turtleboy.py.swp  move_turtlebot.py
src/g07_prii3_move_turtlebot/worlds/: F1L3.world
src/g07_prii3_move_turtlebot/worlds/F1L3/: model.sdf
src/g07_prii3_move_turtlebot/worlds/marker12/: model-1_4.sdf  model-1_5.sdf  model.sdf
src/g07_prii3_turtlebot3/: package.xml  setup.cfg  setup.py
src/g07_prii3_turtlebot3/g07_prii3_turtlebot3/: Deteccion.py  navegar.py
src/g07_prii3_turtlebot3/launch/: f1l3_world.launch.py
src/g07_prii3_turtlebot3/worlds/: F1L3_world.world
src/g07_prii3_turtlebot3/worlds/F1L3/: model.config  model.sdf
