<?xml version="1.0"?>
<package format="3">
  <name>avoid_colisions</name>
  <version>0.1.0</version>
  <description>Paquete ROS2 para mover un TurtleBot y detenerlo si detecta obstáculos con el LIDAR</description>
  <maintainer email="tu_correo@example.com">Tu Nombre</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

