<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  
  <name>evade_colisions</name>
  <version>0.0.0</version>
  <description>Paquete de Python para la lógica de evitación de colisiones en ROS 2.</description>
  <maintainer email="tu_email@example.com">Tu Nombre</maintainer>
  <license>TODO: License declaration</license>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
